# solid-syslog

./: .clang-format  .clang-tidy  .coderabbit.yaml  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  DEVLOG.md  README.md  SECURITY.md  SKILL.md  lychee.toml  misra_suppressions.txt  mkdocs.yml  release-please-config.json
Core/Source/: BlockSequence.c  BlockSequence.h  BlockSequenceStatic.c  CMakeLists.txt  RecordStore.c  RecordStore.h  RecordStorePrivate.h  RecordStoreStatic.c  SolidSyslog.c  SolidSyslogAtomicCounter.c  SolidSyslogAtomicU32.h  SolidSyslogBlockDevice.c  SolidSyslogBlockStore.c  SolidSyslogBlockStoreMessages.c  SolidSyslogBlockStoreStatic.c  SolidSyslogCircularBuffer.c  SolidSyslogCircularBufferMessages.c  SolidSyslogCircularBufferPrivate.h  SolidSyslogCircularBufferStatic.c  SolidSyslogCrc16.c  SolidSyslogCrc16Policy.c  SolidSyslogDatagram.c  SolidSyslogError.c  SolidSyslogErrorMessages.h  SolidSyslogFile.c  SolidSyslogFileBlockDevice.c  SolidSyslogFileBlockDeviceMessages.c  SolidSyslogFileBlockDevicePrivate.h  SolidSyslogFileBlockDeviceStatic.c  SolidSyslogFileStore.c  SolidSyslogFormatter.c  SolidSyslogHeaderField.c  SolidSyslogMacros.h  SolidSyslogMessageFormatter.c  SolidSyslogMessageFormatter.h  SolidSyslogMessages.c  SolidSyslogMetaSd.c  SolidSyslogMetaSdMessages.c  SolidSyslogMetaSdPrivate.h  SolidSyslogMetaSdStatic.c  (+42 more)
Example/: CMakeLists.txt  ExampleMain.c  SolidSyslogExample.c  SolidSyslogExample.h
Example/Common/: ExampleAppName.c  ExampleAppName.h  ExampleCommandLine.c  ExampleCommandLine.h  ExampleInteractive.c  ExampleInteractive.h  ExampleMtlsConfig.c  ExampleMtlsConfig.h  ExampleServiceThread.c  ExampleServiceThread.h  ExampleStderrErrorHandler.c  ExampleStderrErrorHandler.h  ExampleSwitchConfig.c  ExampleSwitchConfig.h  ExampleTcpConfig.c  ExampleTcpConfig.h  ExampleTlsConfig.c  ExampleTlsConfig.h  ExampleTlsSender_OpenSsl_WinsockTcp.c  ExampleTlsSender_Unavailable.c  ExampleUdpConfig.c  ExampleUdpConfig.h
Example/FreeRtos/: README.md
Example/SingleTask/: SolidSyslogExample.c  main.c
Example/Threaded/: ExampleTlsSender.h  ExampleTlsSender_OpenSsl.c  main.c
Example/Windows/: ExampleWindowsCommandLine.c  ExampleWindowsCommandLine.h  SolidSyslogWindowsExample.c  SolidSyslogWindowsExample.h  main.c
Platform/FatFs/: CMakeLists.txt
Platform/FreeRtos/: CMakeLists.txt
Platform/LwipRaw/: CMakeLists.txt
Platform/MbedTls/: CMakeLists.txt
Platform/OpenSsl/: CMakeLists.txt
Platform/PlusFat/: CMakeLists.txt
Platform/PlusTcp/: CMakeLists.txt
Platform/Windows/: CMakeLists.txt
Source/: CMakeLists.txt  PosixUdpSender.c  SolidSyslog.c  SolidSyslogAtomicCounter.c  SolidSyslogBuffer.c  SolidSyslogCrc16Policy.c  SolidSyslogDatagram.c  SolidSyslogFile.c  SolidSyslogFileApi.c  SolidSyslogFileStore.c  SolidSyslogFormat.c  SolidSyslogFormat.h  SolidSyslogFormatter.c  SolidSyslogFormatter.h  SolidSyslogGetAddrInfoResolver.c  SolidSyslogMacros.h  SolidSyslogMetaSd.c  SolidSyslogNullBuffer.c  SolidSyslogNullSecurityPolicy.c  SolidSyslogNullStore.c  SolidSyslogOriginSd.c  SolidSyslogPosixClock.c  SolidSyslogPosixFile.c  SolidSyslogPosixFileApi.c  SolidSyslogPosixHostname.c  SolidSyslogPosixMessageQueueBuffer.c  SolidSyslogPosixMqBuffer.c  SolidSyslogPosixProcId.c  SolidSyslogPosixProcessId.c  SolidSyslogPosixTcpStream.c  SolidSyslogResolver.c  SolidSyslogSender.c  SolidSyslogStore.c  SolidSyslogStream.c  SolidSyslogStructuredData.c  SolidSyslogSwitchingSender.c  SolidSyslogTcpSender.c  SolidSyslogTimeQualitySd.c  SolidSyslogUdpSender.c  SolidSyslog_Sender.c
Tests/: .clang-tidy  BlockSequenceTest.cpp  BufferFake.c  BufferFake.h  BufferFakeTest.cpp  CMakeLists.txt  ClockFake.c  ClockFake.h  ClockFakeTest.cpp  DatagramFake.c  DatagramFake.h  DatagramFakeTest.cpp  FileFake.c  FileFake.h  FileFakeTest.cpp  MqFakeTest.cpp  MutexFake.c  MutexFake.h  OpenSslFakeTest.cpp  PosixUdpSenderTest.cpp  RecordStorePoolTest.cpp  SenderFake.c  SenderFake.h  SenderFakeTest.cpp  SenderSpy.c  SenderSpy.h  SenderSpyTest.cpp  SocketFakeTest.cpp  SocketSpy.c  SocketSpy.h  SolidSyslogAddressTest.cpp  SolidSyslogAtomicCounterContractTest.cpp  SolidSyslogAtomicCounterTest.cpp  SolidSyslogAtomicCounterTestHelper.h  SolidSyslogBlockDeviceTest.cpp  SolidSyslogBlockStoreDrainOrderingTest.cpp  SolidSyslogBlockStorePosixTest.cpp  SolidSyslogBlockStoreTest.cpp  SolidSyslogCircularBufferTest.cpp  SolidSyslogCrc16PolicyTest.cpp  (+77 more)
Tests/Example/: CMakeLists.txt  ExampleAppNameTest.cpp  ExampleCommandLineTest.cpp  ExampleServiceThreadTest.cpp  ExampleSwitchConfigTest.cpp  ExampleWindowsCommandLineTest.cpp  SolidSyslogExampleTest.cpp
Tests/FatFs/: CMakeLists.txt  SolidSyslogFatFsFilePoolTest.cpp  SolidSyslogFatFsFileTest.cpp
Tests/Fixtures/: SmallMessageSizeTunables.h
Tests/FreeRtos/: CMakeLists.txt  CmsdkUartFake.c  CmsdkUartFake.h  CmsdkUartTest.cpp  SolidSyslogFreeRtosAddressTest.cpp  SolidSyslogFreeRtosDatagramTest.cpp  SolidSyslogFreeRtosMutexTest.cpp  SolidSyslogFreeRtosResolverTest.cpp  SolidSyslogFreeRtosStaticResolverTest.cpp  SolidSyslogFreeRtosSysUpTimeTest.cpp  SolidSyslogFreeRtosTcpStreamTest.cpp  SolidSyslogPlusTcpAddressTest.cpp  SolidSyslogPlusTcpDatagramTest.cpp  SolidSyslogPlusTcpResolverTest.cpp  SolidSyslogPlusTcpTcpStreamTest.cpp
Tests/Lwip/: CMakeLists.txt  SolidSyslogLwipRawAddressTest.cpp  SolidSyslogLwipRawDatagramTest.cpp  SolidSyslogLwipRawDnsResolverTest.cpp  SolidSyslogLwipRawMarshalTest.cpp  SolidSyslogLwipRawResolverTest.cpp  SolidSyslogLwipRawTcpStreamTest.cpp
Tests/MbedTls/: CMakeLists.txt  SolidSyslogMbedTlsAesGcmPolicyTest.cpp  SolidSyslogMbedTlsHmacSha256PolicyTest.cpp  SolidSyslogMbedTlsStreamPoolTest.cpp  SolidSyslogMbedTlsStreamTest.cpp
Tests/MbedTlsIntegration/: CMakeLists.txt  MbedTlsTestCert.c  MbedTlsTestServer.c  MbedTlsTestServer.h  SocketStream.c  SolidSyslogMbedTlsStreamIntegrationTest.cpp  main.cpp
Tests/OpenSslIntegration/: BioPairStream.c  BioPairStream.h  CMakeLists.txt  SolidSyslogOpenSslAesGcmPolicyIntegrationTest.cpp  TlsTestCert.c  TlsTestCert.h  (+3 more)
(+589 files in other folders)
